# cortex-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-min.txt  requirements-train.txt  requirements.txt
.github/workflows/: ci.yml
cortex/: __init__.py  cli.py  config.py  observability.py  policy.py  security.py  service.py
cortex/agent/: __init__.py  loop.py  planner.py  runtime.py
cortex/api/: __init__.py  deps.py  middleware.py  routes_auth.py  routes_runs.py  schemas.py  server.py
cortex/api/web/: app.js  index.html  style.css
cortex/db/: __init__.py  engine.py  models.py  repository.py
cortex/llm/: __init__.py  anthropic_backend.py  base.py  cost.py  hf_backend.py  mock_backend.py  resilient.py
cortex/memory/: __init__.py  store.py
cortex/tinybrain/: README.md  __init__.py  backend.py  data.py  device.py  eval.py  generate.py  model.py  scale_up.py  tokenizer.py  train.py
cortex/tools/: __init__.py  base.py  builtin.py  sandbox.py
cortex/worker/: __init__.py  tasks.py  worker_settings.py
deploy/helm/cortex-agent/: .helmignore  Chart.yaml  values.yaml
deploy/helm/cortex-agent/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/k8s/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml
migrations/: env.py
migrations/versions/: e6d4f79136db_initial_schema.py
tests/: conftest.py  test_agent.py  test_api.py  test_backends.py  test_cli.py  test_cost.py  test_coverage_extra.py  test_db.py  test_llm.py  test_memory.py  test_policy.py  test_reliability.py  test_resilient.py  test_runtime.py  test_sandbox.py  test_security.py  test_service.py  test_tinybrain.py  test_tinybrain_backend.py  test_tools.py  test_worker.py
