[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-agent"
version = "0.1.0"
description = "An autonomous agentic AI framework: planning, tool use, memory, and a ReAct loop with pluggable LLM backends."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OCT0PUSPR" }]
keywords = ["agent", "ai", "llm", "react", "anthropic", "claude", "tool-use", "autonomous"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "anthropic>=0.40.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "sse-starlette>=2.1.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
# Heavy ML extras for vector recall and local HF inference (optional).
ml = [
  "sentence-transformers>=2.7.0",
  "transformers>=4.40.0",
  "torch>=2.2.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/OCT0PUSPR/cortex-agent"
Repository = "https://github.com/OCT0PUSPR/cortex-agent"

[project.scripts]
cortex = "cortex.cli:main"

[tool.setuptools.packages.find]
include = ["cortex*"]

[tool.setuptools.package-data]
"cortex.api.web" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008"]
