[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-agent"
version = "0.2.0"
description = "An autonomous agentic AI framework: planning, tool use, memory, and a ReAct loop with pluggable LLM backends."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OCT0PUSPR" }]
keywords = ["agent", "ai", "llm", "react", "anthropic", "claude", "tool-use", "autonomous"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "anthropic>=0.40.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.2.2",
  "email-validator>=2.1.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "sse-starlette>=2.1.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.19.0",
  "greenlet>=3.0.0",
  "alembic>=1.13.0",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
  "tenacity>=8.2.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.1.0",
  "arq>=0.25.0",
  "redis>=5.0.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
# From-scratch TinyBrain model training/serving (torch stack).
train = [
  "torch>=2.2.0",
  "numpy>=1.24.0",
  "tokenizers>=0.15.0",
]
# Heavy ML extras for vector recall and local HF inference (optional).
ml = [
  "sentence-transformers>=2.7.0",
  "transformers>=4.40.0",
  "torch>=2.2.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/OCT0PUSPR/cortex-agent"
Repository = "https://github.com/OCT0PUSPR/cortex-agent"

[project.scripts]
cortex = "cortex.cli:main"

[tool.setuptools.packages.find]
include = ["cortex*"]

[tool.setuptools.package-data]
"cortex.api.web" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["cortex"]
# Only modules that genuinely cannot run under the offline, no-torch, no-Redis,
# no-API-key CI environment are omitted. The TinyBrain model, tokenizer, data,
# device, eval, generate, and serving backend ARE unit-tested (torch-gated) and
# stay in scope; the long training/scale-up scripts are validated by the real
# training run documented in the README, not by unit tests.
omit = [
    # Long training / GPU scale-up entrypoints (validated by a real run, not units).
    "cortex/tinybrain/train.py",
    "cortex/tinybrain/scale_up.py",
    # arq worker entry config (the Redis enqueue/run loop needs a live Redis;
    # the task functions themselves are unit-tested in tests/test_worker.py).
    "cortex/worker/worker_settings.py",
    # Provider SDK backends (no API key / network in CI).
    "cortex/llm/anthropic_backend.py",
    "cortex/llm/hf_backend.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.bandit]
# Reviewed and accepted, not silenced blindly:
#  B101 assert_used     — asserts are used only for internal invariants/typing
#                         narrowing, never for security or input validation.
#  B404/B603 subprocess — the run_python sandbox MUST spawn a subprocess; it does
#                         so with a fixed argv (no shell, no untrusted argv) plus
#                         rlimits, an import allowlist, and a wall-clock timeout
#                         (see cortex/tools/sandbox.py and SECURITY.md).
#  B614 pytorch_load    — torch.load only reads checkpoints the user trained
#                         locally; SECURITY.md documents loading only trusted .pt.
skips = ["B101", "B404", "B603", "B614"]
exclude_dirs = ["tests", "migrations", ".venv"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Note: a standalone ruff.toml at the repo root takes precedence over this
# section; both intentionally avoid the pyupgrade (UP) rules to preserve the
# Python 3.9-compatible typing (Optional/List) used throughout the package.
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
exclude = ["migrations/", "tests/"]

[[tool.mypy.overrides]]
module = ["anthropic.*", "transformers.*", "torch.*", "tokenizers.*", "numpy.*"]
ignore_missing_imports = true
